--- a/src/app/components/home/report-error/report-error.component.less
+++ b/src/app/components/home/report-error/report-error.component.less
@@ -16,7 +16,8 @@
 }
 
 .row{
-  width: 48%;
+  display: flex;
+  flex-direction: column;
 }
 
 .centered{
@@ -42,7 +43,6 @@ h1, p{
   margin: 0;
   padding: 0;
   color: @text-color;
-  margin-bottom: 20px;
 }
 
 .title{
@@ -87,7 +87,7 @@ form{
   padding: 0 30px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   box-sizing: border-box;
 }
 
