feat(about-us): content

--- a/src/app/components/home/about-us/about-us.component.less
+++ b/src/app/components/home/about-us/about-us.component.less
@@ -9,3 +9,17 @@
   background-color: @secondary-color;
   box-sizing: border-box;
 }
+
+.about{
+  position: relative;
+  width: 80%;
+  padding: 0 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  box-sizing: border-box;
+}
+
+.text{
+  text-align: justify;
+}
