fix(spinner): new colors on spinner

--- a/src/app/components/controls/spinner/spinner.component.html
+++ b/src/app/components/controls/spinner/spinner.component.html
@@ -25,17 +25,17 @@
     left: 20px;
   }
   .ldio-cf4ev0s0x7i div:nth-child(1) {
-    background: #ffac6c;
+    background: #aebea4;
     animation: ldio-cf4ev0s0x7i 1s linear infinite;
     animation-delay: -0.5s;
   }
   .ldio-cf4ev0s0x7i div:nth-child(2) {
-    background: rgba(255, 172, 108, 0.4266129032258065);
+    background: rgba(175, 191, 164, 0.4266129032258065);
     animation: ldio-cf4ev0s0x7i 1s linear infinite;
     animation-delay: 0s;
   }
   .ldio-cf4ev0s0x7i div:nth-child(3) {
-    background: #ffac6c;
+    background: #aebea4;
     animation: ldio-cf4ev0s0x7i-o 1s linear infinite;
     animation-delay: -0.5s;
   }
@@ -44,7 +44,7 @@
     height: 200px;
     display: inline-block;
     overflow: hidden;
-    background: #fffbf5;
+    background: #e2e8ce;
   }
   .ldio-cf4ev0s0x7i {
     width: 100%;
