feat(session-service): keys methods

--- a/src/app/components/home/home/home.component.less
+++ b/src/app/components/home/home/home.component.less
@@ -82,9 +82,13 @@
       width: 15px;
       fill: @white-color;
     }
-    a{
-      text-decoration: none;
+    button{
+      font-family: @text-font;
+      font-size: @text-base;
+      border: none;
       color: @white-color;
+      background-color: transparent;
+      cursor: pointer;
     }
   }
 
