--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -14,27 +14,27 @@
       <div class="file-options">
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/mylibrary')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h17v-20h-16.505c-1.375 0-1.375-2 0-2zm.505 4h14v16h-14v-16z"/></svg>
-          <a routerLink="/home/mylibrary">{{ 'HOME.MENU.MY_FILES.NAME' | translate }}</a>
+          <button routerLink="/home/mylibrary">{{ 'HOME.MENU.MY_FILES.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/public')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/public">{{ 'HOME.MENU.PUBLIC_FILES.NAME' | translate }}</a>
+          <button routerLink="/home/public">{{ 'HOME.MENU.PUBLIC_FILES.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/recomendations')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/recomendations">{{ 'HOME.MENU.RECOMENDATIONS.NAME' | translate }}</a>
+          <button routerLink="/home/recomendations">{{ 'HOME.MENU.RECOMENDATIONS.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/upload')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/upload">{{ 'HOME.MENU.UPLOAD.NAME' | translate }}</a>
+          <button routerLink="/home/upload">{{ 'HOME.MENU.UPLOAD.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/report')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/report">{{ 'HOME.MENU.REPORT.NAME' | translate }}</a>
+          <button routerLink="/home/report">{{ 'HOME.MENU.REPORT.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/follow')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/follow">{{ 'HOME.MENU.ABOUT.NAME' | translate }}</a>
+          <button routerLink="/home/follow">{{ 'HOME.MENU.ABOUT.NAME' | translate }}</button>
         </div>
       </div>
     </section>
@@ -44,11 +44,11 @@
       <div class="user-options">
         <div class="menu-option" [ngClass]="{'active-route': activateOption('/home/settings')}">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a routerLink="/home/settings">{{ 'HOME.MENU.SETTINGS.NAME' | translate }}</a>
+          <button routerLink="/home/settings">{{ 'HOME.MENU.SETTINGS.NAME' | translate }}</button>
         </div>
         <div class="menu-option">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <a href="#">{{ 'HOME.MENU.LOGOUT' | translate }}</a>
+          <button (click)="logout()">{{ 'HOME.MENU.LOGOUT' | translate }}</button>
         </div>
       </div>
       <!-- User information -->
