feat(home): tab-index mechanism

--- a/src/app/components/home/about-us/about-us.component.html
+++ b/src/app/components/home/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="content">
+<div tabindex="1" class="content">
   <div class="about">
     <h1 attr.aria-label="{{ 'HOME.MENU.ABOUT.TITLE' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800">{{ 'HOME.MENU.ABOUT.TITLE' | translate }}</h1>
     <p class="text" attr.aria-label="{{ 'HOME.MENU.ABOUT.DESCRIPTION' | translate }}">{{ 'HOME.MENU.ABOUT.DESCRIPTION' | translate }}</p>
