--- a/src/app/components/home/home/home.component.less
+++ b/src/app/components/home/home/home.component.less
@@ -89,7 +89,15 @@
       color: @white-color;
       background-color: transparent;
       cursor: pointer;
+      transition: all @transition-duration ease-out;
+      
+      &:focus{
+        outline: none;
+        border-bottom: 2px solid @primary-color;
+        transform: scale(1.05);
+      }
     }
+
   }
 
   .menu-option:hover{
