fix(home): new icons

--- a/src/app/components/home/settings/settings.component.html
+++ b/src/app/components/home/settings/settings.component.html
@@ -117,7 +117,7 @@
         <img src="../../../../assets/Images/accessibility.svg" alt="">
         <div class="button-row">
           <button  [attr.aria-label]="'HOME.MENU.SETTINGS.ACCESIBILITY.UPLOADBTN' | translate" class="left-button">{{ 'HOME.MENU.SETTINGS.UPLOADBTN' | translate }}</button>
-          <button [attr.aria-label]="'HOME.MENU.SETTINGS.ACCESIBILITY.UPLOADBTN' | translate" class="right-button">{{ 'HOME.MENU.SETTINGS.REMOVEBTN' | translate }}</button>
+          <button [attr.aria-label]="'HOME.MENU.SETTINGS.ACCESIBILITY.REMOVEBTN' | translate" class="right-button">{{ 'HOME.MENU.SETTINGS.REMOVEBTN' | translate }}</button>
         </div>
       </aside>
     </section>
