--- a/src/app/components/home/about-us/about-us.component.less
+++ b/src/app/components/home/about-us/about-us.component.less
@@ -23,3 +23,40 @@
 .text{
   text-align: justify;
 }
+
+.social-networks-container{
+  width: 100%;
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  .social-network{
+    width: 180px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    background-color: @tertiary-color;
+    /* border: 2px solid @tertiary-color; */
+    border-radius: 5px;
+    box-sizing: border-box;
+    justify-content: center;
+
+    svg{
+      fill: @white-color;
+    }
+
+    a{
+      outline: none;
+      text-decoration: none;
+      color: @white-color;
+    }
+
+    &:focus, &:hover{
+      cursor: pointer;
+      background-color: @primary-color;
+      border: 2px solid @white-color;
+    }
+  }
+}
+
