--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -13,7 +13,7 @@
       <!-- File options -->
       <div class="file-options">
         <div class="menu-option" [ngClass]="{'active-route': activateOption('mylibrary')}">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.657 0-3 1.343-3 3v18c0 1.657 1.343 3 3 3h17v-20h-16.505c-1.375 0-1.375-2 0-2zm.505 4h14v16h-14v-16z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M13 6c3.469 0 2 5 2 5s5-1.594 5 2v9h-12v-16h5zm.827-2h-7.827v20h16v-11.842c0-2.392-5.011-8.158-8.173-8.158zm.632-1l-1.459-1h-9v20h1v-19h9.459zm-2.443-2l-1.5-1h-8.516v20h1v-19h9.016z"/></svg>
           <button (click)="redirectTo('mylibrary')">{{ 'HOME.MENU.MY_FILES.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('public')}">
@@ -21,19 +21,19 @@
           <button (click)="redirectTo('public')">{{ 'HOME.MENU.PUBLIC_FILES.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('recomendations')}">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M21.406 9.558c-1.21-.051-2.87-.278-3.977-.744.809-3.283 1.253-8.814-2.196-8.814-1.861 0-2.351 1.668-2.833 3.329-1.548 5.336-3.946 6.816-6.4 7.401v-.73h-6v12h6v-.904c2.378.228 4.119.864 6.169 1.746 1.257.541 3.053 1.158 5.336 1.158 2.538 0 4.295-.997 5.009-3.686.5-1.877 1.486-7.25 1.486-8.25 0-1.648-1.168-2.446-2.594-2.506zm-17.406 10.442h-2v-8h2v8zm15.896-5.583s.201.01 1.069-.027c1.082-.046 1.051 1.469.004 1.563l-1.761.099c-.734.094-.656 1.203.141 1.172 0 0 .686-.017 1.143-.041 1.068-.056 1.016 1.429.04 1.551-.424.053-1.745.115-1.745.115-.811.072-.706 1.235.109 1.141l.771-.031c.822-.074 1.003.825-.292 1.661-1.567.881-4.685.131-6.416-.614-2.239-.965-4.438-1.934-6.959-2.006v-6c3.264-.749 6.328-2.254 8.321-9.113.898-3.092 1.679-1.931 1.679.574 0 2.071-.49 3.786-.921 5.533 1.061.543 3.371 1.402 6.12 1.556 1.055.059 1.024 1.455-.051 1.584l-1.394.167s-.608 1.111.142 1.116z"/></svg>
           <button (click)="redirectTo('recomendations')">{{ 'HOME.MENU.RECOMENDATIONS.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('upload')}">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 18v-10h-2.51l4.51-5.01 4.51 5.01h-2.51v10h-4zm-2 2h8v-10h5l-9-10-9 10h5v10zm8 2h-8v2h8v-2z"/></svg>
           <button (click)="redirectTo('upload')">{{ 'HOME.MENU.UPLOAD.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('report')}">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M13 9.406c0 .215-.177.389-.396.389h-.896c-.208 0-.431.125-.479.426-.038.241.102.435.287.519l.907.404c.199.088.287.318.198.514-.092.196-.325.283-.522.194l-.962-.427c-.125-.057-.263-.026-.36.136-.4.661-1.177 1.316-2.277 1.439-1.121-.125-1.908-.805-2.301-1.479-.08-.137-.223-.148-.337-.097l-.962.428c-.198.088-.431.001-.522-.194-.089-.196-.001-.426.198-.514l.907-.404c.196-.088.323-.275.282-.548-.04-.257-.26-.398-.474-.398h-.895c-.219 0-.396-.173-.396-.388 0-.216.177-.389.396-.389h.901c.206 0 .422-.132.462-.416.03-.217-.103-.406-.29-.478l-.836-.326c-.203-.079-.303-.304-.224-.504.081-.2.311-.298.514-.219l.86.334c.111.042.269.028.353-.165.068-.152.144-.294.224-.429.642.374 1.348.561 2.14.561.78 0 1.495-.191 2.137-.563.085.139.164.287.232.445.073.164.225.199.348.151l.86-.334c.203-.079.433.019.514.219.079.2-.021.425-.224.504l-.836.325c-.18.069-.322.246-.288.5.034.247.245.394.46.394h.901c.219.001.396.174.396.39zm-5.928-4.363c.12.027.225.101.289.205.232.386-.07.717-.351 1.062.452.211.94.315 1.49.315.541 0 1.033-.107 1.489-.318-.277-.339-.579-.677-.35-1.058.064-.104.169-.179.289-.206.238-.052.419-.262.419-.516 0-.29-.24-.527-.536-.527-.354 0-.61.332-.518.666.034.127.016.261-.051.373-.152.251-.412.402-.742.404-.335-.002-.591-.155-.742-.404-.067-.112-.085-.246-.051-.373.092-.334-.164-.666-.518-.666-.296 0-.536.237-.536.528 0 .253.181.463.419.515zm14.097 14.711c.522-.79.831-1.735.831-2.754 0-2.761-2.238-5-5-5s-5 2.239-5 5 2.238 5 5 5c1.019 0 1.964-.309 2.755-.832l2.831 2.832 1.414-1.414-2.831-2.832zm-4.169.246c-1.654 0-3-1.346-3-3s1.346-3 3-3 3 1.346 3 3-1.346 3-3 3zm-4.89 2h-7.11l2.599-3h2.696c.345 1.152.976 2.18 1.815 3zm-2.11-5h-10v-17h22v12.11c-.574-.586-1.251-1.068-2-1.425v-8.685h-18v13h8.295c-.19.634-.295 1.305-.295 2z"/></svg>
           <button (click)="redirectTo('report')">{{ 'HOME.MENU.REPORT.NAME' | translate }}</button>
         </div>
         <div class="menu-option" [ngClass]="{'active-route': activateOption('about')}">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12.015 7c4.751 0 8.063 3.012 9.504 4.636-1.401 1.837-4.713 5.364-9.504 5.364-4.42 0-7.93-3.536-9.478-5.407 1.493-1.647 4.817-4.593 9.478-4.593zm0-2c-7.569 0-12.015 6.551-12.015 6.551s4.835 7.449 12.015 7.449c7.733 0 11.985-7.449 11.985-7.449s-4.291-6.551-11.985-6.551zm-.015 3c-2.209 0-4 1.792-4 4 0 2.209 1.791 4 4 4s4-1.791 4-4c0-2.208-1.791-4-4-4z"/></svg>
           <button (click)="redirectTo('about')">{{ 'HOME.MENU.ABOUT.NAME' | translate }}</button>
         </div>
       </div>
@@ -43,11 +43,11 @@
       <!-- User options -->
       <div class="user-options">
         <div class="menu-option" [ngClass]="{'active-route': activateOption('settings')}">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
-          <button routerLink="/home/settings">{{ 'HOME.MENU.SETTINGS.NAME' | translate }}</button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10.187 9.125l1.831 1.832c.199.918-1.131 2.264-2.061 2.061l-1.832-1.832c-.083.284-.125.577-.125.871 0 .779.295 1.556.889 2.15.656.656 1.537.951 2.396.884.453-.034.899.131 1.222.452l2.033 2.034c.28.282.649.423 1.018.423.809 0 1.459-.663 1.442-1.472-.009-.358-.149-.714-.422-.988l-2.034-2.034c-.321-.322-.487-.769-.452-1.222.066-.858-.229-1.739-.885-2.395-.595-.595-1.372-.889-2.15-.889-.293 0-.586.042-.87.125zm5.841 7.417c0 .269-.219.486-.486.486-.269 0-.486-.218-.486-.486s.218-.485.486-.485.486.217.486.485zm-9.944-12.542c1.379 1.612 2.576 3 4.916 3h11v13h-20v-16h4.084zm.916-2h-7v20h24v-17h-13c-1.629 0-2.305-1.058-4-3z"/></svg>
+          <button (click)="redirectTo('settings')">{{ 'HOME.MENU.SETTINGS.NAME' | translate }}</button>
         </div>
         <div class="menu-option">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5.495 2h16.505v-2h-17c-1.656 0-3 1.343-3 3v18c0 1.657 1.344 3 3 3h17v-20h-16.505c-1.376 0-1.376-2 0-2zm.505 4h7v7l2-2 2 2v-7h3v16h-14v-16z"/></svg>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 2v2h12v16h-12v2h14v-20h-14zm0 7.408l2.963 2.592-2.963 2.592v-1.592h-8v-2h8v-1.592zm-2-4.408v4h-8v6h8v4l8-7-8-7z"/></svg>
           <button (click)="logout()">{{ 'HOME.MENU.LOGOUT' | translate }}</button>
         </div>
       </div>
@@ -62,7 +62,7 @@
     </section>
   </aside>
   <aside class="page">
-    <div #myElement [tabIndex]="dynamicTabIndex" attr.aria-label="{{ 'NAVBAR.CONTENT' | translate }}"></div>
+    <div #myElement [tabIndex]="dynamicTabIndex" attr.aria-label="{{ 'HOME.MENU.CONTENT' | translate }}"></div>
     <router-outlet></router-outlet>
     <!-- <div class="audio-player">
       <audio controls>
