--- a/src/app/components/home/report-error/report-error.component.html
+++ b/src/app/components/home/report-error/report-error.component.html
@@ -4,9 +4,9 @@
       <app-spinner></app-spinner>
     </div>
 
-    <h1 attr.aria-label="{{ 'HOME.MENU.REPORT.NAME' | translate }}" data-aos="fade-down" data-aos-duration="800" data-aos-delay="800">{{ 'HOME.MENU.REPORT.NAME' | translate }}</h1>
+    <h1 attr.aria-label="{{ 'HOME.MENU.REPORT.NAME' | translate }}" data-no-aos="fade-down" data-no-aos-duration="800" data-no-aos-delay="800">{{ 'HOME.MENU.REPORT.NAME' | translate }}</h1>
 
-    <div class="inputs" data-aos="fade-down" data-aos-duration="800" data-aos-delay="1200">
+    <div class="inputs" data-no-aos="fade-down" data-no-aos-duration="800" data-no-aos-delay="1200">
       <div class="row">
         <app-label
           text="{{ 'HOME.MENU.REPORT.SECTION' | translate }}"
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <div class="centered" data-aos="fade-down" data-aos-duration="800" data-aos-delay="1600">
+    <div class="centered" data-no-aos="fade-down" data-no-aos-duration="800" data-no-aos-delay="1600">
       <div class="row">
         <div class="button-comtainer">
           <app-button
